Bug 305712 - The default supplied themes Renkoo and Simkete should always use the user set application font
Summary: The default supplied themes Renkoo and Simkete should always use the user set...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-24 13:12 UTC by Kai Uwe Broulik
Modified: 2014-04-10 21:46 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2012-08-24 13:12:45 UTC
I have a notebook with high dpi monitor and configured KDE’s font to 125% (System Settings → Application Appearance → Fonts → Force DPI: 125%) but fonts inside the chat are not affected by this and thus too tiny.

Reproducible: Always
Comment 1 David Edmundson 2013-01-19 18:20:11 UTC
AFAIK, there's nothing we can do for fixing all the themes (please correct me if I'm wrong). It's externally sourced HTML, and in some cases the fonts are hardcoded. Anything we do to fix it, is more likely to break things than fix it.

What I will do is change this bug from:
 Text-UI does not respect Global DPI setting
to
The default supplied themes Renkoo and Simpete should always use the user set application font.

This solves most of the problems a lot better and covers those changing it for accessibility or personal taste. If you are changing your theme, you're customising things, and can change the fonts/sizes yourself too.
Comment 2 Martin Klapetek 2014-04-10 15:19:17 UTC
The webkit font is always fixed at 96 DPI, it's a Qt's "bug"[1], but we can just make the fonts scale by the actual DPI, that will work.

Kai, did you force the DPI settings in the KCM? Or are you just using the defaults (ie. no forced DPI setting)?

[1] - https://bugreports.qt-project.org/browse/QTBUG-29571
Comment 3 Martin Klapetek 2014-04-10 21:44:10 UTC
Git commit 865f1826ec33d376b82738404521da886f9f2b45 by Martin Klapetek.
Committed on 10/04/2014 at 21:36.
Pushed by mklapetek into branch 'master'.

Use proper DPI in chat view

WebKit has a DPI hardcoded to 96; in order to not get super tiny fonts
we rescale them by the real DPI

Reviewed-by: David Edmundson

M  +9    -3    lib/adium-theme-view.cpp

http://commits.kde.org/telepathy-text-ui/865f1826ec33d376b82738404521da886f9f2b45
Comment 4 Martin Klapetek 2014-04-10 21:44:10 UTC
Git commit 5f4411f8d7da2060f74b021c5579b157a2731ea3 by Martin Klapetek.
Committed on 10/04/2014 at 21:42.
Pushed by mklapetek into branch 'master'.

Use system font if theme does not provide default font and font size

M  +11   -2    lib/chat-window-style.cpp

http://commits.kde.org/telepathy-text-ui/5f4411f8d7da2060f74b021c5579b157a2731ea3
Comment 5 Martin Klapetek 2014-04-10 21:45:52 UTC
Git commit f5e12db4e09b0068766bf2bf6134728e1a8b9ea6 by Martin Klapetek.
Committed on 10/04/2014 at 21:36.
Pushed by mklapetek into branch 'kde-telepathy-0.8'.

Use proper DPI in chat view

WebKit has a DPI hardcoded to 96; in order to not get super tiny fonts
we rescale them by the real DPI

Reviewed-by: David Edmundson

M  +9    -3    lib/adium-theme-view.cpp

http://commits.kde.org/telepathy-text-ui/f5e12db4e09b0068766bf2bf6134728e1a8b9ea6
Comment 6 Martin Klapetek 2014-04-10 21:45:53 UTC
Git commit 2793999ad1089bd4a02c7973fa74b178c3b60e93 by Martin Klapetek.
Committed on 10/04/2014 at 21:42.
Pushed by mklapetek into branch 'kde-telepathy-0.8'.

Use system font if theme does not provide default font and font size

M  +11   -2    lib/chat-window-style.cpp

http://commits.kde.org/telepathy-text-ui/2793999ad1089bd4a02c7973fa74b178c3b60e93