Use proper DPI in chat view

WebKit has a DPI hardcoded to 96; in order to not get super tiny fonts
we rescale them by the real DPI

Reviewed-by: David Edmundson

BUG: 305712